[tool.poetry]
name = "flesk-unit-converter"
version = "0.1.0"
description = ""
authors = ["BananfonBan"]
readme = "README.md"
packages = [
    { include = 'flesk-unit-converter' }
]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
jinja2 = "^3.1.4"
gunicorn = "^23.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
